--- a/MVVM/MVVM.csproj
+++ b/MVVM/MVVM.csproj
@@ -29,5 +29,11 @@
     <EmbeddedResource Update="View\PokemonCrud.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\Pokemon\ListaPokemon.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="View\Pokemon\RegistrarPokemon.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
